--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,9 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
+client/node_modules
+client/dist
+client/dist-ssr
 *.local
+
+server/out/
 
 # Editor directories and files
 .vscode/*
