--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,12 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@types/chart.js": "^2.9.41",
     "svelte": "^4.2.18",
     "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "chart.js": "^4.4.5",
+    "chartjs-chart-financial": "^0.2.1"
   }
 }
